--- a/index.html
+++ b/index.html
@@ -1,67 +1,392 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jonathan Khan - Portfolio</title>
+  <style>
+    /* Global Styles */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      background-color: #fafafa;
+      color: #444;
+    }
+    h1, h2, h3, h4, h5 {
+      font-weight: 600;
+      margin: 0 0 10px;
+    }
+    p {
+      line-height: 1.6;
+      margin: 5px 0 15px;
+    }
+    ul {
+      margin: 5px 0 20px 25px;
+    }
+    li {
+      margin-bottom: 5px;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 30px 0;
+    }
+
+    /* Header Section */
+    header {
+      background-color: #002147;
+      color: #fff;
+      padding: 30px;
+      text-align: center;
+    }
+    header h1 {
+      margin-bottom: 5px;
+      font-size: 2.2rem;
+    }
+
+    /* Main Content Container */
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 20px;
+    }
+
+    /* Intro / Profile Picture */
+    .intro {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .intro img {
+      border-radius: 50%;
+      border: 4px solid #ccc;
+      margin-bottom: 20px;
+    }
+    .intro h2 {
+      font-size: 1.8rem;
+      margin-bottom: 10px;
+    }
+
+    /* Section Headings */
+    .container h2 {
+      color: #002147;
+      margin-top: 0;
+      margin-bottom: 10px;
+      padding-bottom: 5px;
+      border-bottom: 2px solid #ccc;
+      font-size: 1.6rem;
+    }
+
+    /* Lists */
+    ul li strong {
+      color: #002147;
+    }
+
+    /* Carousel Section */
+    .carousel-container {
+      position: relative;
+      max-width: 800px;
+      margin: 30px auto 50px;
+      overflow: hidden;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    .carousel {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+    .carousel-item {
+      min-width: 100%;
+      text-align: center;
+      padding: 20px;
+    }
+    /* Smaller images - adjust percentage as needed */
+    .carousel-image {
+      max-width: 30%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      cursor: pointer;
+    }
+    .carousel-description {
+      margin-top: 10px;
+      font-size: 15px;
+      color: #444;
+    }
+    .carousel-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 33, 71, 0.7);
+      color: white;
+      border: none;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%;
+      font-size: 18px;
+      width: 40px;
+      height: 40px;
+    }
+    .carousel-button:hover {
+      background-color: rgba(0, 33, 71, 0.9);
+    }
+    .prev {
+      left: 10px;
+    }
+    .next {
+      right: 10px;
+    }
+
+    /* Lightbox Modal for Fullscreen Images */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 999; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; 
+      height: 100%; 
+      overflow: auto; 
+      background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
+    }
+    .modal-content {
+      display: block;
+      margin: 5% auto;
+      max-width: 90%;
+      max-height: 85vh;
+      object-fit: contain; 
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .modal-caption {
+      margin: auto;
+      display: block;
+      text-align: center;
+      color: #ddd;
+      font-size: 16px;
+      padding: 10px 0 20px;
+      max-width: 700px;
+    }
+    .modal-close {
+      position: absolute;
+      top: 20px;
+      right: 40px;
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .modal-close:hover {
+      color: #ccc;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #002147;
+      color: #fff;
+      text-align: center;
+      padding: 15px;
+    }
+  </style>
 </head>
-
 <body>
-    <h1>Hello,</h1>
 
-    <img src="./profile-picture.jpg" height="150px" alt="">
-    <h2>My name is Jonathan Khan</h2>
-    <hr>
+  <header>
+    <h1>Jonathan Khan - Portfolio</h1>
+    <p>Computer Science Student | UI/UX Enthusiast | Front-End Developer</p>
+  </header>
 
+  <div class="container">
+
+    <!-- Introduction -->
+    <div class="intro">
+      <img src="./profile-picture.jpg" height="150px" alt="Profile Picture">
+      <h2>Hi, I'm Jonathan Khan</h2>
+      <p>I'm a Computer Science student at the University of Toronto with a passion for UI/UX design, front-end development, and creating meaningful digital experiences.</p>
+    </div>
+    
+    <hr/>
+
+    <!-- Objective -->
     <h2>Objective:</h2>
-    <p>Looking to gain summer internship opportunities in the field of front-end web development.</p>
+    <p>Seeking opportunities to contribute to impactful projects as a Product Designer Intern or Front-End Developer, with a focus on building user-centered applications.</p>
 
+    <!-- My Work (Carousel) -->
+    <h2>My Work:</h2>
+    <div class="carousel-container">
+      <div class="carousel">
+        <div class="carousel-item">
+          <img src="./CalanderScreen.jpg" alt="Calendar Screen" class="carousel-image">
+          <p class="carousel-description">This screen allows users to view events and schedules in a clean, organized format. Users can easily navigate through dates and see their upcoming commitments.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./FriendScreen.jpg" alt="Friend Screen" class="carousel-image">
+          <p class="carousel-description">This screen helps users manage their connections, view friend lists, and interact with their social network seamlessly.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./Homescreen.jpg" alt="Home Screen" class="carousel-image">
+          <p class="carousel-description">The main hub of the app, displaying essential information and quick access to key features like events, chats, and more.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./NotificationScreen.jpg" alt="Notification Screen" class="carousel-image">
+          <p class="carousel-description">This screen ensures users stay updated with real-time alerts and notifications, keeping them informed of important activities.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./ProfileScreen.jpg" alt="Profile Screen" class="carousel-image">
+          <p class="carousel-description">Allows users to view and edit their profiles, showcasing details like their bio, events, and achievements.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./VerifyScreen.jpg" alt="Verification Screen" class="carousel-image">
+          <p class="carousel-description">Ensures secure access by guiding users through account verification with ease and clarity.</p>
+        </div>
+      </div>
+      <button class="carousel-button prev">&#10094;</button>
+      <button class="carousel-button next">&#10095;</button>
+    </div>
+
+    <!-- Education -->
     <h2>Education:</h2>
     <ul>
-        <li>Bs in Computer Science at University of Toronto (ongoing)</li>
-        <li>Highschool</li>
-        <li>Web development bootcamps</li>
+      <li><strong>B.Sc. in Computer Science, Mathematics, and GIS</strong> - University of Toronto (Expected 2027)</li>
+      <li><strong>High School Diploma</strong> - Philopateer Christian College (2022)</li>
     </ul>
 
+    <!-- Skills -->
     <h2>Skills:</h2>
     <ul>
-        <li>Python (proficient)</li>
-        <li>HTML5 (intermediate)</li>
-        <li>VSCODE (proficient)</li>
-        <li>Git/Github (proficient)</li>
-        <li>JavaScript (Beginner)</li>
-        <li>CSS (Beginner)</li>
+      <li><strong>UI/UX Design:</strong> Proficient in Figma and Canva for prototyping and wireframing.</li>
+      <li><strong>Front-End Development:</strong> React Native, HTML5, CSS3, and JavaScript (proficient).</li>
+      <li><strong>Back-End:</strong> Firebase for real-time data management and authentication.</li>
+      <li><strong>Version Control:</strong> Git/GitHub (Proficient).</li>
+      <li><strong>Tools:</strong> VS Code, ArcGIS Pro, and Microsoft Office Suite.</li>
+      <li><strong>Soft Skills:</strong> Collaboration, problem-solving, and attention to detail.</li>
     </ul>
 
-    <h2>My Hobbies:</h2>
-    <ol>
-        <li>Sports
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Mixed_martial_arts" target="_blank">MMA</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Boxing" target="_blank">Boxing</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Track_and_field" target="_blank">Track and Field</a></li>
-            </ul>
-        </li>
-        <li>Video Games
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/The_Elder_Scrolls_V:_Skyrim" target="_blank">Skyrim</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Bloodborne" target="_blank">Bloodborne</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Watch_Dogs_(video_game)" target="_blank">Watch Dogs 1</a></li>
-            </ul>
-        </li>
-        <li>Other
-            <ol>
-                <li>Nature walks</li>
-                <li>Coding</li>
-                <li>Learning</li>
-            </ol>
-        </li>
-    </ol>
-</body>
+    <!-- Experience -->
+    <h2>Experience:</h2>
+    <ul>
+      <li>
+        <strong>Founder & Developer, Campus Connect</strong> (2024 - Present)
+        <ul>
+          <li>Designed and developed a mobile app to enhance university social engagement.</li>
+          <li>Implemented event discovery and RSVP functionality using React Native and Firebase.</li>
+          <li>Conducted user research and testing to refine the app's design and features.</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Participant, University of Toronto Global Engineering Challenge</strong> (2021)
+        <ul>
+          <li>Collaborated with a team to design a wildfire prediction tool using geospatial data.</li>
+          <li>Presented findings and prototypes to stakeholders.</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Volunteer, City of Mississauga's One Million Trees Program</strong> (2022)
+        <ul>
+          <li>Supported project organization and data recording for urban sustainability initiatives.</li>
+        </ul>
+      </li>
+    </ul>
 
-<h5>
-    <footer>
-        <p>© 2018 Jonathan Khan</p>
-    </footer>
-</h5>
+    <!-- Projects -->
+    <h2>Projects:</h2>
+    <ul>
+      <li>
+        <strong>Campus Connect Mobile App</strong>
+        <ul>
+          <li>Developed a platform for event discovery and social engagement on campus.</li>
+          <li>Created intuitive user interfaces and navigation workflows.</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Portfolio Website</strong>
+        <ul>
+          <li>Built a responsive portfolio to showcase projects using HTML, CSS, and JavaScript.</li>
+        </ul>
+      </li>
+    </ul>
+
+  </div> <!-- /.container -->
+
+  <!-- Lightbox Modal HTML (hidden by default) -->
+  <div id="imgModal" class="modal">
+    <span class="modal-close">&times;</span>
+    <img class="modal-content" id="modalImg" />
+    <div class="modal-caption" id="modalCaption"></div>
+  </div>
+
+  <!-- Carousel & Lightbox JavaScript -->
+  <script>
+    /* Carousel Controls */
+    const carousel = document.querySelector('.carousel');
+    const items = document.querySelectorAll('.carousel-item');
+    const prevButton = document.querySelector('.prev');
+    const nextButton = document.querySelector('.next');
+    let currentIndex = 0;
+
+    function showSlide(index) {
+      const totalItems = items.length;
+      if (index < 0) {
+        currentIndex = totalItems - 1; // Wrap around to the last item
+      } else if (index >= totalItems) {
+        currentIndex = 0; // Wrap around to the first item
+      } else {
+        currentIndex = index;
+      }
+      carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+    }
+
+    prevButton.addEventListener('click', () => {
+      showSlide(currentIndex - 1);
+    });
+
+    nextButton.addEventListener('click', () => {
+      showSlide(currentIndex + 1);
+    });
+
+    // Auto-slide functionality (optional)
+    setInterval(() => {
+      showSlide(currentIndex + 1);
+    }, 5000); // Change slides every 5 seconds
+
+    /* Lightbox (Modal) for Fullscreen Images */
+    const modal = document.getElementById('imgModal');
+    const modalImg = document.getElementById('modalImg');
+    const captionText = document.getElementById('modalCaption');
+    const closeBtn = document.querySelector('.modal-close');
+
+    // When user clicks an image in the carousel, open modal and display image fullscreen
+    document.querySelectorAll('.carousel-image').forEach((img) => {
+      img.addEventListener('click', () => {
+        modal.style.display = 'block';
+        modalImg.src = img.src;
+        captionText.innerHTML = img.alt; // Display alt text as caption
+      });
+    });
+
+    // When the user clicks on <span> (x), close the modal
+    closeBtn.onclick = function() {
+      modal.style.display = 'none';
+    };
+
+    // Also close if user clicks anywhere outside the image
+    window.onclick = function(event) {
+      if (event.target === modal) {
+        modal.style.display = 'none';
+      }
+    };
+  </script>
+
+  <footer>
+    <p>© 2025 Jonathan Khan</p>
+  </footer>
+
+</body>
 </html>
