--- a/index.html
+++ b/index.html
@@ -12,18 +12,13 @@
   <link rel="stylesheet" href="assets/css/main.css">
 
   <style>
-    /* Keep everything from Global, but add/override styles for "My Work" carousel */
-
-    /* Make “My Work” images 30% or so if you like the original snippet’s style 
-       (here we use the code from your second snippet exactly). You can tweak if needed. */
-
-    /* Carousel container (from your second snippet) */
+    /* Global carousel container styling (applies to both carousels) */
     .carousel-container {
       position: relative;
       max-width: 800px;
       margin: 30px auto 50px;
       overflow: hidden;
-      background: #fff; /* White background for contrast */
+      background: #fff;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
@@ -33,12 +28,15 @@
     }
     .carousel-item {
       min-width: 100%;
-      text-align: center;
       padding: 20px;
+      text-align: center;
+      box-sizing: border-box;
     }
     .carousel-image {
-      max-width: 30%;  /* images around 30% width, like in your second snippet */
+      max-width: 30%;
       height: auto;
+      margin: 0 auto;
+      display: block;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -47,13 +45,16 @@
     .carousel-description {
       margin-top: 10px;
       font-size: 15px;
-      color: #444;  /* Slightly darker text */
+      color: #444;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .carousel-button {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background-color: rgba(24, 90, 219, 0.7); /* Semi-transparent brand color */
+      background-color: rgba(24, 90, 219, 0.7);
       color: #fff;
       border: none;
       cursor: pointer;
@@ -66,24 +67,34 @@
     .carousel-button:hover {
       background-color: rgba(24, 90, 219, 0.9);
     }
-    .prev {
+
+    /* First carousel buttons */
+    .carousel1-prev {
       left: 10px;
     }
-    .next {
+    .carousel1-next {
       right: 10px;
     }
 
-    /* Lightbox Modal for Fullscreen Images (from second snippet) */
+    /* Second carousel buttons */
+    .carousel2-prev {
+      left: 10px;
+    }
+    .carousel2-next {
+      right: 10px;
+    }
+
+    /* Lightbox Modal */
     .modal {
-      display: none;           /* Hidden by default */
-      position: fixed;         /* Stay in place */
-      z-index: 999;            /* Sit on top */
+      display: none;
+      position: fixed;
+      z-index: 999;
       left: 0;
       top: 0;
       width: 100%; 
       height: 100%; 
       overflow: auto; 
-      background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
+      background-color: rgba(0, 0, 0, 0.8);
     }
     .modal-content {
       display: block;
@@ -148,7 +159,7 @@
           <div class="header--nav-toggle"><span></span></div>
         </header>
 
-        <!-- SIDE NAV (unchanged, no contact/hire) -->
+        <!-- SIDE NAV (unchanged) -->
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
@@ -185,40 +196,59 @@
             </div>
           </li>
 
-          <!-- SECTION 2: MY WORK (REPLACED with carousel snippet) -->
+          <!-- SECTION 2: MY WORK (First Carousel) -->
           <li class="l-section section">
             <div class="work">
               <h2>My Work</h2>
               <div class="work--lockup">
+                
+                <!-- FIRST CAROUSEL (3 images) -->
                 <div class="carousel-container">
-                  <div class="carousel">
+                  <div class="carousel" id="carousel1">
                     <!-- 1. Calendar Screen -->
                     <div class="carousel-item">
                       <img src="./CalanderScreen.jpg" alt="Calendar Screen" class="carousel-image">
                       <p class="carousel-description">
                         This screen allows users to view events and schedules in a clean, organized format.
-                        Easily navigate through dates and see upcoming commitments.
                       </p>
                     </div>
                     <!-- 2. Friend Screen -->
                     <div class="carousel-item">
                       <img src="./FriendScreen.jpg" alt="Friend Screen" class="carousel-image">
                       <p class="carousel-description">
-                        Manage connections, view friend lists, and interact with your social network seamlessly.
+                        Allows Users to see others in a modern manner
                       </p>
                     </div>
                     <!-- 3. Home Screen -->
                     <div class="carousel-item">
                       <img src="./Homescreen.jpg" alt="Home Screen" class="carousel-image">
                       <p class="carousel-description">
-                        The main hub of the app, displaying essential info and quick access to events, chats, and more.
+                        Entices Users from first glance
                       </p>
                     </div>
+                  </div>
+                  <button class="carousel-button carousel1-prev">&#10094;</button>
+                  <button class="carousel-button carousel1-next">&#10095;</button>
+                </div>
+
+              </div>
+            </div>
+          </li>
+
+          <!-- SECTION 3: MY WORK (Second Carousel) -->
+          <li class="l-section section">
+            <div class="work">
+              <h2>More Screens</h2>
+              <div class="work--lockup">
+                
+                <!-- SECOND CAROUSEL (3 images) -->
+                <div class="carousel-container">
+                  <div class="carousel" id="carousel2">
                     <!-- 4. Notification Screen -->
                     <div class="carousel-item">
                       <img src="./NotificationScreen.jpg" alt="Notification Screen" class="carousel-image">
                       <p class="carousel-description">
-                        Stay updated with real-time alerts and notifications, keeping you informed of important activities.
+                        Sleak notification presentation
                       </p>
                     </div>
                     <!-- 5. Profile Screen -->
@@ -236,14 +266,15 @@
                       </p>
                     </div>
                   </div>
-                  <button class="carousel-button prev">&#10094;</button>
-                  <button class="carousel-button next">&#10095;</button>
+                  <button class="carousel-button carousel2-prev">&#10094;</button>
+                  <button class="carousel-button carousel2-next">&#10095;</button>
                 </div>
+
               </div>
             </div>
           </li>
 
-          <!-- SECTION 3: ABOUT (unchanged) -->
+          <!-- SECTION 4: ABOUT (unchanged) -->
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
@@ -273,7 +304,7 @@
     </div> <!-- #viewport -->
   </div> <!-- .container -->
   
-  <!-- OUTER NAV (unchanged, no contact/hire) -->
+  <!-- OUTER NAV -->
   <ul class="outer-nav">
     <li class="is-active">Home</li>
     <li>My Work</li>
@@ -281,53 +312,84 @@
   </ul>
 </div> <!-- .perspective -->
 
-
-<!-- LIGHTBOX MODAL (taken from your snippet) -->
+<!-- LIGHTBOX MODAL -->
 <div id="imgModal" class="modal">
   <span class="modal-close">&times;</span>
   <img class="modal-content" id="modalImg" />
   <div class="modal-caption" id="modalCaption"></div>
 </div>
 
-<!-- Carousel & Lightbox JavaScript -->
+<!-- Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
 
 <script>
-  /* Carousel Controls */
-  const carousel = document.querySelector('.carousel');
-  const items = document.querySelectorAll('.carousel-item');
-  const prevButton = document.querySelector('.prev');
-  const nextButton = document.querySelector('.next');
-  let currentIndex = 0;
+  /* ======== Carousel #1 ======== */
+  const carousel1 = document.getElementById('carousel1');
+  const items1 = carousel1.querySelectorAll('.carousel-item');
+  const prevButton1 = document.querySelector('.carousel1-prev');
+  const nextButton1 = document.querySelector('.carousel1-next');
+  let currentIndex1 = 0;
 
-  function showSlide(index) {
-    const totalItems = items.length;
+  function showSlide1(index) {
+    const totalItems = items1.length;
     if (index < 0) {
-      currentIndex = totalItems - 1; // Wrap around to the last item
+      currentIndex1 = totalItems - 1; // Wrap around to last item
     } else if (index >= totalItems) {
-      currentIndex = 0; // Wrap around to the first item
+      currentIndex1 = 0; // Wrap around to first item
     } else {
-      currentIndex = index;
+      currentIndex1 = index;
     }
-    carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+    carousel1.style.transform = `translateX(-${currentIndex1 * 100}%)`;
   }
 
-  prevButton.addEventListener('click', () => {
-    showSlide(currentIndex - 1);
+  prevButton1.addEventListener('click', () => {
+    showSlide1(currentIndex1 - 1);
+  });
+  nextButton1.addEventListener('click', () => {
+    showSlide1(currentIndex1 + 1);
   });
 
-  nextButton.addEventListener('click', () => {
-    showSlide(currentIndex + 1);
-  });
-
-  // Auto-slide functionality (optional)
+  // Auto-slide #1 (optional)
   setInterval(() => {
-    showSlide(currentIndex + 1);
-  }, 5000); // every 5 seconds
+    showSlide1(currentIndex1 + 1);
+  }, 5000);
 
-  /* Lightbox Modal (Fullscreen) */
+
+  /* ======== Carousel #2 ======== */
+  const carousel2 = document.getElementById('carousel2');
+  const items2 = carousel2.querySelectorAll('.carousel-item');
+  const prevButton2 = document.querySelector('.carousel2-prev');
+  const nextButton2 = document.querySelector('.carousel2-next');
+  let currentIndex2 = 0;
+
+  function showSlide2(index) {
+    const totalItems = items2.length;
+    if (index < 0) {
+      currentIndex2 = totalItems - 1;
+    } else if (index >= totalItems) {
+      currentIndex2 = 0;
+    } else {
+      currentIndex2 = index;
+    }
+    carousel2.style.transform = `translateX(-${currentIndex2 * 100}%)`;
+  }
+
+  prevButton2.addEventListener('click', () => {
+    showSlide2(currentIndex2 - 1);
+  });
+  nextButton2.addEventListener('click', () => {
+    showSlide2(currentIndex2 + 1);
+  });
+
+  // Auto-slide #2 (optional)
+  setInterval(() => {
+    showSlide2(currentIndex2 + 1);
+  }, 5000);
+
+
+  /* ======== Lightbox (Fullscreen) ======== */
   const modal = document.getElementById('imgModal');
   const modalImg = document.getElementById('modalImg');
   const captionText = document.getElementById('modalCaption');
